syntax = "proto3";

package pdf;
// =================

import "google/protobuf/empty.proto";

service PdfService {
  rpc Generate (PdfGeneratingRequest) returns (PdfGeneratingResponse);
  rpc GeneratePDFStream (stream PdfDataRequest) returns (PdfGeneratingResponse);
}

message PdfDataRequest {
  bytes data = 1;
  string fileName = 2;
}

message PdfGeneratingRequest {
  repeated PdfDataRequest files = 1;
}

message PdfGeneratingResponse {
  repeated string paths = 1;
}
